Title page and Log In

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,26 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="Foodie">
+        <item name="android:text">@string/foodie</item>
+        <item name="android:textSize">@dimen/text_size_64sp</item>
+        <item name="android:textColor">@color/text_color_black</item>
+    </style>
+    <style name="LogIn">
+        <item name="android:text">@string/login</item>
+        <item name="android:textSize">@dimen/text_size_36sp</item>
+        <item name="android:textColor">@color/text_color_black</item>
+    </style>
+    <style name="name">
+        <item name="android:textSize">@dimen/text_size_24sp</item>
+        <item name="android:textColor">@color/text_color_black</item>
+        <item name="android:text">@string/name</item>
+    </style>
+    <style name="login2">
+        <item name="android:textSize">@dimen/text_size_24sp</item>
+        <item name="android:backgroundTint">@color/light_red_color</item>
+        <item name="android:text">@string/login2</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
 </resources>
