--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="text_size_36sp">36sp</dimen>
     <dimen name="text_size_18sp">18sp</dimen>
     <dimen name="text_size_24sp">24sp</dimen>
+    <dimen name="text_size_14sp">14sp</dimen>
 </resources>
