--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -70,4 +70,14 @@
         <item name="android:textColor">@color/text_color_black</item>
         <item name="android:textSize">@dimen/text_size_14sp</item>
     </style>
+    <style name="important">
+        <item name="android:text">@string/text4</item>
+        <item name="android:textColor">@color/light_red_color</item>
+        <item name="android:textSize">@dimen/text_size_14sp</item>
+    </style>
+    <style name="som170">
+        <item name="android:textSize">@dimen/text_size_18sp</item>
+        <item name="android:textColor">@color/light_red_color</item>
+        <item name="android:text">@string/_170</item>
+    </style>
 </resources>
