--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -80,4 +80,10 @@
         <item name="android:textColor">@color/light_red_color</item>
         <item name="android:text">@string/_170</item>
     </style>
+    <style name="the_order">
+        <item name="android:text">@string/text10</item>
+        <item name="android:textColor">@color/text_color_white</item>
+        <item name="android:textSize">@dimen/text_size_14sp</item>
+        <item name="textAllCaps">false</item>
+    </style>
 </resources>
