--- a/app/src/main/res/layout/cafes_menu.xml
+++ b/app/src/main/res/layout/cafes_menu.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_orange_color">
+    android:background="@color/light_orange_color"
+    tools:context=".Cafes_Menu_Activity">
 
 
     <ImageView
