--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="300dp"
+        android:id="@+id/cardView"
         android:layout_height="300dp"
         app:cardCornerRadius="300dp"
         android:backgroundTint="@color/light_red_color"
@@ -16,10 +17,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
+        <Button
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:backgroundTint="@color/light_red_color"
             style="@style/Foodie"
-            android:layout_width="200dp"
-            android:layout_height="100dp" />
+            android:textAllCaps="false"/>
+
 
     </androidx.cardview.widget.CardView>
 
