--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -2,7 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".LogIn">
 
     <TextView
         android:id="@+id/textView"
@@ -68,6 +70,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="310dp"
+        android:id="@+id/cardView2"
         android:layout_height="50dp"
         app:cardCornerRadius="50dp"
         android:backgroundTint="@color/light_red_color"
@@ -79,7 +82,8 @@
         <Button
             android:layout_width="310dp"
             android:layout_height="50dp"
-            style="@style/login2" />
+            style="@style/login2"
+            android:textAllCaps="false"/>
 
     </androidx.cardview.widget.CardView>
 
