--- a/app/src/main/res/layout/the_order.xml
+++ b/app/src/main/res/layout/the_order.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_orange_color">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/light_orange_color"
+    tools:context=".The_Order_Activity">
 
 
     <ImageView
@@ -172,6 +174,7 @@
 
         <Button
             android:layout_width="250dp"
+            android:id="@+id/Button1"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/light_red_color"
             style="@style/the_order" />
