--- a/app/src/main/res/layout/cafes_menu.xml
+++ b/app/src/main/res/layout/cafes_menu.xml
@@ -29,39 +29,45 @@
         app:srcCompat="@drawable/arrow_2" />
 
 
-    <ImageView
-        android:id="@+id/imageView14"
-        android:layout_width="300dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="15dp"
-        app:layout_constraintEnd_toEndOf="parent"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView6"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="10dp"
+        android:backgroundTint="@color/light_red_color"
+        app:cardCornerRadius="30dp"
         app:layout_constraintStart_toEndOf="@+id/imageView13"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/rectangle_6__1_" />
+        app:layout_constraintTop_toTopOf="parent">
 
+        <Button
+            style="@style/near_with_me"
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:backgroundTint="@color/light_orange_color"
+            android:text="@string/itpiz_search"
+            android:textAllCaps="false" />
 
-    <ImageView
-        android:id="@+id/imageView15"
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
         android:layout_width="40dp"
         android:layout_height="20dp"
-        android:layout_marginStart="20dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView14"
-        app:layout_constraintStart_toStartOf="@+id/imageView14"
-        app:layout_constraintTop_toTopOf="@+id/imageView14"
-        app:srcCompat="@drawable/component_5" />
+        android:backgroundTint="@color/light_orange_color"
+        app:layout_constraintBottom_toBottomOf="@+id/cardView6"
+        app:layout_constraintStart_toStartOf="@+id/cardView6"
+        app:layout_constraintTop_toTopOf="@+id/cardView6">
 
-    <EditText
-        android:id="@+id/editText3"
-        style="@style/near_with_me"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="30dp"
-        android:text="@string/itpiz_search"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView14"
-        app:layout_constraintEnd_toEndOf="@+id/imageView14"
-        app:layout_constraintStart_toEndOf="@+id/imageView15"
-        app:layout_constraintTop_toTopOf="@+id/imageView14" />
+        <ImageView
+            android:id="@+id/imageView15"
+            android:layout_width="40dp"
+            android:layout_height="20dp"
+            app:layout_constraintBottom_toBottomOf="@+id/cardView6"
+            app:layout_constraintStart_toStartOf="@+id/cardView6"
+            app:layout_constraintTop_toTopOf="@+id/cardView6"
+            app:srcCompat="@drawable/component_5" />
 
+    </androidx.cardview.widget.CardView>
 
     <ImageView
         android:id="@+id/imageView16"
@@ -69,7 +75,7 @@
         android:layout_height="300dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imageView14"
+        app:layout_constraintTop_toBottomOf="@+id/cardView6"
         app:srcCompat="@drawable/rectangle_14" />
 
     <EditText
